[gd_scene load_steps=7 format=2]

[ext_resource path="res://Attacks/Phase2/Attack2/Spam_windows/SpamWindows.tscn" type="PackedScene" id=1]
[ext_resource path="res://Attacks/Phase2/Attack2/Heart_square/HeartSquare.tscn" type="PackedScene" id=2]
[ext_resource path="res://Border/Border.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/KinematicHeart.tscn" type="PackedScene" id=4]
[ext_resource path="res://Attacks/Phase2/Attack2/attack_2_script.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 720, 150, 0, 0, 0, 0, 720, 150, 0, 0, 0, 0, 720, 400 )
}

[node name="Attack2" type="Node2D"]
script = ExtResource( 5 )
bullet_scene = ExtResource( 2 )
bullet_scene_2 = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 495, 337 )

[node name="HeartPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="HeartSpawnLocation" type="PathFollow2D" parent="HeartPath"]
position = Vector2( 720, 150 )
rotation = 1.5708

[node name="BulletSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="BorderField" parent="." instance=ExtResource( 3 )]
position = Vector2( 580, 275 )

[node name="SpawnWindowsPos" type="Node2D" parent="BorderField"]
position = Vector2( -135, -137 )
scale = Vector2( 0.58678, 0.966085 )

[node name="Spawn1" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 410, 24 )

[node name="Spawn2" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 303, 234 )

[node name="Spawn3" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 283, 94 )

[node name="Spawn4" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 410, 254 )

[node name="Spawn5" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 73, 214 )

[node name="Spawn6" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 203, 281 )

[node name="Spawn7" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 233, 34 )

[node name="Spawn8" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 73, 44 )

[node name="Spawn9" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 33, 94 )

[node name="Spawn10" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 163, 84 )

[node name="Spawn11" type="Node2D" parent="BorderField/SpawnWindowsPos"]
position = Vector2( 393, 144 )

[node name="KinematicHeart" parent="." instance=ExtResource( 4 )]
position = Vector2( 582, 275 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="BulletSpawnTimer" to="." method="_on_BulletSpawnTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
